# music-catalog

./: .gitignore  Makefile  README.md  config-example.yaml  pyproject.toml
src/music_catalog/: cli.py  config.py  db.py  inventory.py  schema.sql
src/music_catalog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webapp/: =3.0.0  app.py  config.py  db.py  jobrunner.py
webapp/static/: style.css
webapp/templates/: _base.html  album.html  albums.html  search.html  utils.html
